Refactoring FixingFile -> FixedFile
