# static/openapi/schema.yaml
@@ -251,15 +251,15 @@ paths:
       tags:
         - fixing-commits
 
-  /api/fixing-files/:
+  /api/fixed-files/:
     get:
-      operationId: listFixingFilesViewSets
-      description: Retrieve all the fixing-files.
+      operationId: listFixedFilesViewSets
+      description: Retrieve all the fixed-files.
       parameters:
         - name: fixing_commit
           in: query
           required: false
-          description: 'The fixing-commit hash. It allows to retrieve all fixing-files for a given fixing-commit'
+          description: 'The fixing-commit hash. It allows to retrieve all fixed-files for a given fixing-commit'
           schema:
             type: string
         - name: repository
@@ -280,14 +280,14 @@ paths:
                     is_false_positive: false
                     bug_inducing_commit: "d1f923c66126a1af0e2515ffc2643d9c7585e9de"
                     fixing_commit: "f9ec5c62381014e6370fafe705dbd70d9391b315"
-          description: 'The list of fixing-files. If the parameter repository is passed, then it returns the list of fixing-files related to true-positive fixing-commits only'
+          description: 'The list of fixed-files. If the parameter repository is passed, then it returns the list of fixing-files related to true-positive fixing-commits only'
         '400':
           description: 'Bad request. Pass only one parameter among fixing_commit and repository, or none.'
       tags:
-        - fixing-files
+        - fixed-files
 
     post:
-      operationId: createFixingFilesViewSet
+      operationId: createFixedFilesViewSet
       description: Create a fixing-file.
       parameters:
         - in: body
@@ -309,7 +309,7 @@ paths:
             type: string
           example: 'f9ec5c62381014e6370fafe705dbd70d9391b315'
       requestBody:
-        $ref: '#/components/requestBodies/FixingFileBody'
+        $ref: '#/components/requestBodies/FixedFileBody'
       responses:
         '201':
           description: 'The request has been fulfilled, resulting in the creation of a new fixing-file.'
@@ -318,11 +318,11 @@ paths:
         '409':
           description: 'Conflict. There already exists a fixing-file with this properties.'
       tags:
-      - fixing-files
+      - fixed-files
 
-  /api/fixing-files/{id}/:
+  /api/fixed-files/{id}/:
     patch:
-      operationId: partialUpdateFixingFilesViewSet
+      operationId: partialUpdateFixedFilesViewSet
       description: 'Set up the is_false_positive field of a fixing-file. If is_false_positive
         equals False, then it switches to True, and vice-versa.'
       parameters:
@@ -338,9 +338,9 @@ paths:
         '404':
           description: 'No fixing-file found with this id.'
       tags:
-      - fixing-files
+      - fixed-files
     delete:
-      operationId: destroyFixingFilesViewSet
+      operationId: destroyFixedFilesViewSet
       description: Delete a fixing-file.
       parameters:
       - name: id
@@ -355,7 +355,7 @@ paths:
         '404':
           description: 'No fixing-file found with this id.'
       tags:
-      - fixing-files
+      - fixed-files
 
   /api/tasks/:
     get:
@@ -447,13 +447,13 @@ components:
             msg: "fix wrong variable"
             date: "22/06/2020 20:39"
             repository: "6853087"
-    FixingFileBody:
+    FixedFileBody:
       description: A JSON object containing fixing-file information
       required: true
       content:
         application/json:
           schema:
-            $ref: '#/components/schemas/FixingFile'
+            $ref: '#/components/schemas/FixedFile'
           example:
             filepath: "tasks/main.yaml"
             bug_inducing_commit: "d1f923c66126a1af0e2515ffc2643d9c7585e9de"
@@ -515,7 +515,7 @@ components:
         - sha
         - repository
 
-    FixingFile:
+    FixedFile:
       type: object
       properties:
         id:
